GPencil – Move to New Layer Does Not Move #75219

Closed
opened 2020-03-30 19:08:41 +02:00 by ronsn · 9 comments

System Information
Operating system: Linux-5.3.0-42-generic-x86_64-with-debian-buster-sid 64 Bits
Graphics card: GeForce GTX 1660 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 435.21

Blender Version
Broken:

  • version: 2.81 (sub 16), branch: master, commit date: 2019-12-04 11:32, hash: f1aa4d18d4
  • ...
  • version: 2.83 (sub 11), branch: master, commit date: 2020-03-30 16:38, hash: 2c9e27f209

Worked:

  • version: 2.80 (sub 75), branch: master, commit date: 2019-07-29 14:47, hash: f6cb5f5449

Short description of error
If you select a Stroke in Edit Mode and press M -> New Layer a new layer will be added but the selected stroke will not be moved to that new layer.

Exact steps for others to reproduce the error

  1. Open Blender and choose 2D Animation on the Splash Screen
  2. Draw a line
  3. Press Tab to change to Edit Mode
  4. Select your drawn stroke and press M -> New Layer

To check if your stroke is now on that new layer, go to the Layer section in the Properties Window and hide the new layer (see attached screenshot): properties_layer_section.png

–––––––––––––––

Stay safe! :)

**System Information** Operating system: Linux-5.3.0-42-generic-x86_64-with-debian-buster-sid 64 Bits Graphics card: GeForce GTX 1660 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 435.21 **Blender Version** Broken: - version: 2.81 (sub 16), branch: master, commit date: 2019-12-04 11:32, hash: `f1aa4d18d4` - ... - version: 2.83 (sub 11), branch: master, commit date: 2020-03-30 16:38, hash: `2c9e27f209` Worked: - version: 2.80 (sub 75), branch: master, commit date: 2019-07-29 14:47, hash: `f6cb5f5449` **Short description of error** If you select a Stroke in *Edit Mode* and press `M` -> `New Layer` a new layer will be added but the selected stroke will not be moved to that new layer. **Exact steps for others to reproduce the error** 1. Open Blender and choose *2D Animation* on the *Splash Screen* 2. Draw a line 3. Press `Tab` to change to *Edit Mode* 4. Select your drawn stroke and press `M` -> `New Layer` To check if your stroke is now on that new layer, go to the *Layer* section in the *Properties Window* and hide the new layer (see attached screenshot): ![properties_layer_section.png](https://archive.blender.org/developer/F8437155/properties_layer_section.png) ––––––––––––––– Stay safe! :)
Author

Added subscriber: @ronsn

Added subscriber: @ronsn

Added subscriber: @mendio

Added subscriber: @mendio

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Antonio Vazquez was assigned by Matias Mendiola 2020-03-30 19:19:43 +02:00

I was able to reproduce the bug.

I was able to reproduce the bug.

This is more a design problem. The New Layer option only create a layer but don't move., I mean, the M menu is two things in one menu...move to layer or create a new layer, but not moving anything. This was working in the same way for all previous versions.

This is more a design problem. The New Layer option only create a layer but don't move., I mean, the `M` menu is two things in one menu...move to layer or create a new layer, but not moving anything. This was working in the same way for all previous versions.
Author

In #75219#900507, @antoniov wrote:
[...] This was working in the same way for all previous versions.

Hmm, but as I wrote in the task description, it worked in version: 2.80 (sub 75), branch: master, commit date: 2019-07-29 14:47, hash: f6cb5f5449
^^

> In #75219#900507, @antoniov wrote: > [...] This was working in the same way for all previous versions. Hmm, but as I wrote in the task description, it worked in version: 2.80 (sub 75), branch: master, commit date: 2019-07-29 14:47, hash: f6cb5f5449 ^^

New Layer in M menu should move the selected strokes to the new layer like Collections does

New Layer in M menu should move the selected strokes to the new layer like Collections does

This issue was referenced by 5b88ab25bd

This issue was referenced by 5b88ab25bd83804af007136a1c7b9d8a9d1c1514

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser Project (Legacy)
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#75219
No description provided.