Fix T75219: Move to New Layer not working

This was an old design problem.